--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -4,6 +4,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:orientation="vertical"
+        android:visibility="invisible"
+        android:id="@+id/layout"
         android:layout_height="match_parent"
         tools:context="com.ghostwan.robotsdk.TestActivity">
 
